--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "php-webdriver/webdriver": "^1.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
