--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "php-webdriver/webdriver": "^1.15"
+        "php-webdriver/webdriver": "^1.15",
+        "spatie/laravel-responsecache": "^7.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
