--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
+        "firebase/php-jwt": "^6.11",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "php-webdriver/webdriver": "^1.15",
