--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/passport": "^12.0",
         "laravel/tinker": "^2.9",
         "php-webdriver/webdriver": "^1.15",
-        "spatie/laravel-responsecache": "^7.6"
+        "spatie/laravel-responsecache": "^7.6",
+        "stripe/stripe-php": "^16.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
