--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
         "firebase/php-jwt": "^6.11",
+        "laravel/cashier": "^15.6",
         "laravel/framework": "^11.31",
         "laravel/passport": "^12.0",
         "laravel/tinker": "^2.9",
         "php-webdriver/webdriver": "^1.15",
-        "spatie/laravel-responsecache": "^7.6",
-        "stripe/stripe-php": "^16.6"
+        "spatie/laravel-responsecache": "^7.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "kitloong/laravel-migrations-generator": "^7.1",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
