--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
         "firebase/php-jwt": "^6.11",
-        "laravel/framework": "^11.31",
+        "laravel/framework": "^11.44",
+        "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "php-webdriver/webdriver": "^1.15",
         "spatie/laravel-responsecache": "^7.6",
