--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "darkaonline/l5-swagger": "^8.6",
         "firebase/php-jwt": "^6.11",
         "laravel/framework": "^11.44",
+        "laravel/octane": "^2.8",
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "php-webdriver/webdriver": "^1.15",
