--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
         "firebase/php-jwt": "^6.11",
+        "ichtrojan/laravel-otp": "^2.0",
         "laravel/cashier": "^15.6",
         "laravel/framework": "^11.31",
         "laravel/passport": "^12.0",
+        "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "php-webdriver/webdriver": "^1.15",
         "spatie/laravel-responsecache": "^7.6"
