--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+BROWSER_ENDPOINT=
+BROWSER_USER_NAME=
+BROWSER_PASSWORD=
+
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
