--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "php-webdriver/webdriver": "^1.15",
+        "propaganistas/laravel-phone": "^5.3",
         "spatie/laravel-responsecache": "^7.6"
     },
     "require-dev": {
