--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         "darkaonline/l5-swagger": "^8.6",
         "ichtrojan/laravel-otp": "^2.0",
         "laravel/cashier": "^15.6",
-        "laravel/passport": "^12.0",
         "laravel/framework": "^11.44",
         "laravel/octane": "^2.8",
+        "laravel/passport": "^12.0",
+        "laravel/reverb": "^1.0",
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "propaganistas/laravel-phone": "^5.3",
