--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/tinker": "^2.9",
         "laravelcm/laravel-subscriptions": "^1.4",
         "propaganistas/laravel-phone": "^5.3",
-        "spatie/laravel-responsecache": "^7.6"
+        "spatie/laravel-responsecache": "^7.6",
+        "tomatophp/filament-translation-component": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
