--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dedoc/scramble": "^0.12.19",
         "f9webltd/laravel-api-response-helpers": "^2.1",
         "filament/filament": "^3.3",
         "ichtrojan/laravel-otp": "^2.0",
